# corednshome

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  corednsgui.pro  corednsgui.qrc  corednsgui.rc  corednsgui_zh-CN.ts  corednsgui_zh_CN.ts  corednshome.pro  donatedialog.cpp  donatedialog.h  donatedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkreplyhelper.cpp  networkreplyhelper.h  scopedguard.cpp  scopedguard.h  settings.cpp  settings.h  updatelist.sh
.github/workflows/: macos.yml  win-mingw.yml  win-msvc.yml  windows.yml
info/: linux32.txt  linux64.txt  macOS.txt  win32.txt  win64.txt
src/: CMakeLists.txt  corednsgui.qrc  corednsgui.rc  corednsgui_zh-CN.ts  corednshome.exe.manifest  corednshome.qrc  corednshome.rc  corednshome_zh-CN.ts  donatedialog.cpp  donatedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manifest.rc  networkreplyhelper.cpp  networkreplyhelper.h  scopedguard.cpp  settings.cpp  settings.h  src.pro
src/res/: apple.txt  bogus.txt  china.txt  google.txt
src/translations/: corednshome_cs.ts  corednshome_da.ts  corednshome_de.ts  corednshome_el.ts  corednshome_en.ts  corednshome_es.ts  corednshome_fi.ts  corednshome_fr.ts  corednshome_he.ts  corednshome_hu.ts  corednshome_is.ts  corednshome_it.ts  corednshome_ja.ts  corednshome_ko.ts  corednshome_nb.ts  corednshome_nl.ts  corednshome_pl.ts  corednshome_pt.ts  corednshome_ro.ts  corednshome_ru.ts  corednshome_sk.ts  corednshome_sv.ts  corednshome_th.ts  corednshome_tr.ts  corednshome_uk.ts  corednshome_zh_CN.ts  corednshome_zh_HK.ts  corednshome_zh_TW.ts
